# pyGeodes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/source/examples/: index.rst  s3_download.ipynb  s3_example.ipynb  s3_subset.ipynb  search-and-download.ipynb  search_roi.ipynb
docs/source/user_guide/: cli.rst  download_item.rst  installation.rst  manipulating_objects.rst  quickstart.ipynb  search_collections.rst  search_items.rst
pygeodes/: _info.py  geodes.py
pygeodes/cli/: cli.py
pygeodes/utils/: config.py  consts.py  formatting.py  profile.py  request.py  stac.py
tests/: serializer.py  test_case.py  test_geodes.py  testutils.py
tests/test_env/: dataframe.json  pygeodes-config.json  query.json
tests/test_env/serialized/: collection.json  item.json
tests/utils/: test_config.py  test_dataclasses_utils.py  test_datetime_utils.py  test_decorators.py  test_formatting.py  test_io.py  test_profile.py  test_query.py  test_request.py  test_s3.py  test_stac.py
utils/: convert_model.py  copy_info.py
