[tool.poetry]
name = "pygeodes"
version = "0.1.7"
description = "A Python client for Geodes APIs"
authors = ["CNES"]
readme = "README.md"
include=["pygeodes/data/model.json"]
license = "MIT"
repository = "https://github.com/CNES/pyGeodes"
homepage = "https://geodes.cnes.fr"

[tool.poetry.dependencies]
python = "^3.10.14"
tqdm = "^4.66.0"
remotezip = "^0.12.0"
validators = ">=0.28.0"
pystac = "^1.8.0"
requests = "^2.32.2"
aiohttp = "^3.9.0"
boto3 = "^1.28.16"
geopandas = "^1.0.0"
aiofiles = "^24.1.0"
ipython = "^8.12.0"
rich = "^13.7.0"
whoosh = "^2.7.4"

[tool.poetry.group.dev.dependencies]
sphinx = "7.1.0"
numpydoc = "^1.7.0"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "0.14.4"
black = "^24.4.2"
toml = "^0.10.2"
flake8 = "5.0.4"
nbsphinx = "^0.9.4"
jupyter = "^1.0.0"
pandoc = "^2.3"
jupyter-sphinx = "^0.5.3"

[tool.poetry.scripts]
pygeodes = "pygeodes.cli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
